# zed-update-versions

./: .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  SPEC_TECHNICAL.md  TODO.md  cliff.toml  release-plz.toml
.github/workflows/: ci.yml  release-lsp.yml
examples/: package.json  requirements.txt
extension/: Cargo.toml  extension.toml
extension/src/: lib.rs
lsp-server/: Cargo.toml
lsp-server/src/: backend.rs  cache.rs  config.rs  main.rs  semver_utils.rs
lsp-server/src/providers/: cargo.rs  mod.rs  npm.rs  pypi.rs
